--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,20 +28,22 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  motion_tab_bar_v2: ^0.3.0
+  flutter_bloc: ^8.1.6
+  easy_localization: ^3.0.6
   animated_splash_screen: ^1.3.0
   responsive_framework: ^0.2.0
-  flutter_bloc: ^8.1.5
-  shared_preferences:
+  shared_preferences: null
   dio: ^5.4.3+1
   lottie: ^3.1.2
+  flutter_localization: ^0.2.0
   flutter:
     sdk: flutter
-
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -55,7 +57,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -68,13 +69,10 @@ flutter:
   assets:
     - asses/image/
     - asses/lottie/Animation - 1716640676735.json
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -94,3 +92,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
