--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  image_picker: ^1.1.2
   motion_tab_bar_v2: ^0.3.0
   flutter_bloc: ^8.1.6
   easy_localization: ^3.0.6
